[gd_scene load_steps=20 format=2]

[ext_resource path="res://resources/fonts/orange juice 2.0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/sprites/UI/Star_Full2.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/UI/stars_button2_pressed.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/UI/clock_day.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/UI/stars_button2_hover.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/UI/ink_progress.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/UI/clock_background.png" type="Texture" id=7]
[ext_resource path="res://scripts/UI/GUI.gd" type="Script" id=8]
[ext_resource path="res://resources/sprites/UI/clock_progress.png" type="Texture" id=9]
[ext_resource path="res://scenes/HouseRating.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/sprites/UI/Pen.png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/UI/journal2.png" type="Texture" id=12]
[ext_resource path="res://resources/sprites/UI/stars_button2.png" type="Texture" id=13]
[ext_resource path="res://resources/fonts/Texts_Font.ttf" type="DynamicFontData" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.764706, 0.588235, 0 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=5]
resource_name = "Wiggle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 2.82843, 2.82843, 2.82843, 2.82843, 2.82843 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 3.0, 1.0, 0.0 ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="PenTexture" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.0
margin_top = 16.0
margin_right = 257.0
margin_bottom = 88.0
texture = ExtResource( 11 )
expand = true

[node name="InkProgressBar" type="TextureProgress" parent="Panel/PenTexture"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_top = 25.0
margin_right = 37.0
margin_bottom = 41.0
rect_scale = Vector2( 2.7, 1.337 )
value = 100.0
texture_progress = ExtResource( 6 )
fill_mode = 1

[node name="StarsButton" type="TextureButton" parent="Panel"]
margin_left = 8.0
margin_top = 21.0
margin_right = 288.0
margin_bottom = 72.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Start1" type="Sprite" parent="Panel/StarsButton"]
position = Vector2( 60.2, 25.2 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Start2" type="Sprite" parent="Panel/StarsButton"]
position = Vector2( 100.2, 25.2 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Start3" type="Sprite" parent="Panel/StarsButton"]
position = Vector2( 140.2, 25.2 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Start4" type="Sprite" parent="Panel/StarsButton"]
position = Vector2( 180.2, 25.2 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="Star5" type="Sprite" parent="Panel/StarsButton"]
position = Vector2( 220.2, 25.2 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="ClockBackground" type="TextureRect" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_top = 1.0
margin_right = -28.0
margin_bottom = 111.0
texture = ExtResource( 4 )
expand = true

[node name="ClockProgress" type="TextureProgress" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_top = 34.0
margin_right = -41.9999
margin_bottom = 98.0
rect_scale = Vector2( 0.7, 0.7 )
max_value = 60.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 9 )
fill_mode = 5

[node name="Timer" type="Timer" parent="Panel/ClockProgress"]

[node name="Label" type="Label" parent="Panel/ClockProgress"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.5
margin_top = 110.0
margin_right = 61.5
margin_bottom = 153.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DAY"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Panel/ClockProgress"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -113.0
margin_right = 49.0
margin_bottom = 85.0
color = Color( 0, 0, 0, 0.0980392 )

[node name="HouseRating" parent="Panel" instance=ExtResource( 10 )]

[node name="JournalText" type="ColorRect" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -59.0
margin_right = -9.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 99, 17 )
color = Color( 0, 0, 0, 0.0980392 )

[node name="JournalTextHelpUI" type="Label" parent="Panel/JournalText"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Press K to show Journal"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Panel/JournalText"]

[node name="JournalAnimation" type="AnimationPlayer" parent="Panel/JournalText"]
anims/Wiggle = SubResource( 5 )

[node name="Journal" type="TextureRect" parent="Panel"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -220.0
margin_top = -286.0
margin_right = -9.0
margin_bottom = -17.0
texture = ExtResource( 12 )
expand = true

[node name="ActionsText" type="Label" parent="Panel/Journal"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -73.192
margin_top = 16.0
margin_right = 96.808
margin_bottom = 70.0
custom_colors/font_color = Color( 0.27451, 0.478431, 0.0509804, 1 )
custom_fonts/font = SubResource( 4 )
text = "- El objeto X ha sido movido hacia Y
- Aasdasdasd"
valign = 1
autowrap = true

[connection signal="pressed" from="Panel/StarsButton" to="." method="_on_StarsButton_pressed"]
[connection signal="timeout" from="Panel/ClockProgress/Timer" to="." method="_on_Timer_timeout"]
